
    >>> mail_queue[:] = []

Add their gadugadu numbers:

    >>> browser2 = Browser.logIn('user2@ututi.lt', 'password')
    >>> browser2.open('http://localhost/profile/edit')
    >>> browser2.getControl(name='gadugadu_uin').value = "564321"
    >>> browser2.getControl('Update contacts').click()

    >>> from ututi.lib import gg
    >>> msg = gg.sent_messages.pop()
    >>> browser2.getControl(name='gadugadu_confirmation_key').value = msg[1]
    >>> browser2.getControl('OK').click()

    >>> browser2.getControl('Receive news into gg').click()
    >>> browser2.getControl('Update contacts').click()

    >>> browser3 = Browser.logIn('user@ututi.lt', 'password')
    >>> browser3.open('http://localhost/profile/edit')
    >>> browser3.getControl(name='gadugadu_uin').value = "133465"
    >>> browser3.getControl('Update contacts').click()

    >>> from ututi.lib import gg
    >>> msg = gg.sent_messages.pop()
    >>> browser3.getControl(name='gadugadu_confirmation_key').value = msg[1]
    >>> browser3.getControl('OK').click()

    >>> browser3.getControl('Receive news into gg').click()

    >>> browser3.getControl('Update contacts').click()

    >>> browser3.getControl('Receive news into gg').selected
    True

Make some noise:

    >>> browser.getLink('Subjects').click()
    >>> browser.getLink(url="/group/moderators/watch_subject").click()

    >>> browser.getLink(url='mat_analize').click()
    >>> browser.getLink('Edit').click()
    >>> browser.getControl('Tags').value = 'mat, analize'
    >>> browser.getControl('Save').click()

Let's look at the emails:

    >>> setEventTime(datetime.datetime(2009, 10, 10, 10, 15))
    >>> Browser.logIn().open('http://localhost/news/daily?date=2009-10-10')
    >>> printEmails()
    >>> mail_queue[:] = []

    >>> browser2.open(browser.url)

    >>> browser2.getLink('New page').click()
    >>> browser2.getControl('Title').value = "How to be awesome!"
    >>> browser2.getControl('Content').value = "Being Awesome is easy!"