@@ -41,6 +41,12 @@ Add their gadugadu numbers:
 
     >>> from ututi.lib import gg
     >>> msg = gg.sent_messages.pop()
+
+Pretend we lost it ;)
+
+    >>> browser2.getControl('Send code again').click()
+    >>> msg = gg.sent_messages.pop()
+
     >>> browser2.getControl(name='gadugadu_confirmation_key').value = msg[1]
     >>> browser2.getControl('OK').click()
 
